細かいビューの調整

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -43,7 +43,7 @@
 <div class="row">
  <div class="col-md-4">
   <div class="actions">
-    <%= f.submit "Sign up",class:"btn btn-outline-primary" %>
+    <%= f.submit "Sign up",class:"signupbtn2" %>
   </div>
 </div>
 </div>
