--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,12 +18,151 @@
 body {
   background-color: white;
 }
+.subtitle{
+  border-bottom: 1px solid lightblue;
+}
+.photo1{
+  animation-name: fadein;
+  animation-duration: 2s;
+}
+@keyframes fadein {
+  from {
+      opacity: 0;
+      transform: translateY(15px);
+  }
+  to {
+      opacity: 1;
+      transform: translateY(0);
+  }
+  }
+.photo2{
+  animation-name: fadein;
+  animation-duration: 3s;
+}
+
+.photo3{
+  animation-name: fadein;
+  animation-duration: 4s;
+}
+.adlogo{
+  width: 30px;
+  height: 30px;
+}
+.adlogo2{
+  width: 20px;
+  height: 20px;
+  background-color: lightblue;
+  border-radius: 20%;
+ }
+.textparent{
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+.text{
+  font-family: 'Poppins', sans-serif;
+}
+
+.kohlipe{
+  width: 450px;
+  height: 350px;
+}
+.mypage-title{
+  text-align: start;
+  position: fixed;
+  z-index: 40;
+}
+.mypage-sbtitle{
+  text-align: end;
+}
+.btns{
+  text-align: end;
+}
+.loginbtn{
+  background-color: #000055;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  border-radius: 10%;
+  border: 2px solid #000055;
+  padding: 10px 50px 10px 50px;
+  position: fixed;
+  top: 120px;
+  right: 200px;
+  z-index: 30;
+}
+.loginbtn:hover{
+  background-color: white;
+  font-family: 'Poppins', sans-serif;
+  color:#000055 ;
+  border-radius: 10%;
+  border: 2px solid #000055;
+  padding: 10px 50px 10px 50px;
+  transition: all 0.7s ;
+}
+.loginbtn2{
+  background-color: #000055;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  border-radius: 10%;
+  border: 2px solid #000055;
+  padding: 5px 30px 5px 30px;
+}
+.loginbtn2:hover{
+  background-color: white;
+  font-family: 'Poppins', sans-serif;
+  color:#000055 ;
+  border-radius: 10%;
+  border: 2px solid #000055;
+  padding: 5px 30px 5px 30px;
+  transition: all 0.7s ;
+}
+.signupbtn{
+  background-color: #000055;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  border-radius: 10%;
+  border: 2px solid #000055;
+  padding: 10px 50px 10px 50px;
+  position: fixed;
+  top: 120px;
+  right: 30px;
+  z-index: 30;
+
+}
+.signupbtn:hover{
+  background-color: white;
+  font-family: 'Poppins', sans-serif;
+  color: #000055;
+  border-radius: 10%;
+  border: 2px solid #000055;
+  padding: 10px 50px 10px 50px;
+  transition: all 0.7s ;
+
+}
+.signupbtn2{
+  background-color: #000055;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  border-radius: 10%;
+  border: 2px solid #000055;
+  padding: 5px 30px 5px 30px;
+
+}
+.signupbtn2:hover{
+  background-color: white;
+  font-family: 'Poppins', sans-serif;
+  color: #000055;
+  border-radius: 10%;
+  border: 2px solid #000055;
+  padding: 5px 30px 5px 30px;
+  transition: all 0.7s ;
+
+}
 a{
   text-decoration: none;
 }
 nav{
   font-family: 'Poppins', sans-serif;
- 
 }
 
 .top{
@@ -91,7 +230,7 @@ a.btn--orange {
   font-weight: bold;
   color: #fff;
   background-color: #000055;
-  border: 3px solid #FFCC00;
+
 }
 
 a.btn--orange:hover {
@@ -101,6 +240,7 @@ a.btn--orange:hover {
   color: #000055;
   background-color: #FFD700;
   border: 1px solid #000055;
+  transition: all 0.5s;
 }
 
 a.btn--shadow {
@@ -137,6 +277,8 @@ a.btn--circle {
    border: 1px solid #D7EEFF;
    border-radius: 100%;
    background-color: #D7EEFF;
+   animation-name: fadein;
+   animation-duration: 1.5s;
  }
  .pokopoko{
    background-color: #D7EEFF;
@@ -146,6 +288,8 @@ a.btn--circle {
    position: relative;
    left: 60%;
    top: 20%;
+   animation-name: fadein;
+   animation-duration: 2s;
 
    
  }
@@ -156,6 +300,8 @@ a.btn--circle {
    width: 60px;
    position: absolute;
    right: 40%;
+   animation-name: fadein;
+   animation-duration: 0.6s;
  }
 /*以上目標設定画面*/
 
@@ -165,7 +311,7 @@ a.btn--circle {
 .users{
   background-color: #D7EEFF	;
 }
-.mypage-title{
+.title{
   font-family: 'Poppins', sans-serif;
 }
 .sannno{
@@ -188,21 +334,22 @@ a.btn--circle {
   font-family: 'Poppins', sans-serif;
 }
 .setagoalbtn{
-  font-family: 'Poppins', sans-serif;
-  border: 3px solid #000055;
   background-color: #000055;
+  font-family: 'Poppins', sans-serif;
   color: white;
-  border-radius: 50%;
-  padding: 12px;
+  border-radius: 10%;
+  border: 2px solid #000055;
+  padding: 10px 50px 10px 50px;
 }
 .setagoalbtn:hover{
 
+  background-color: white;
   font-family: 'Poppins', sans-serif;
+  color:#000055 ;
+  border-radius: 10%;
   border: 2px solid #000055;
-  background-color: #000055;
-  color: white;
-  border-radius: 50%;
-  padding: 12px;
+  padding: 10px 50px 10px 50px;
+  transition: all 0.7s ;
 }
 
 .form-label{
@@ -211,6 +358,13 @@ a.btn--circle {
 
 .list-group-item{
   font-family: 'Poppins', sans-serif;
+}
+.Acchivecount{
+  font-family: 'Poppins', sans-serif;
+  background-color: white;
+}
+.sannno{
+  font-size: small;
 }
   
 
@@ -298,3 +452,22 @@ a.btn--circle {
    text-align: end;
  }
 /*以上ランキングページ*/
+
+.searchbtn{
+  background-color: #000055;
+  font-family: 'Poppins', sans-serif;
+  color: white;
+  border-radius: 10%;
+  border: 2px solid #000055;
+  padding: 5px 30px 5px 30px;
+  border: 1px solid lightblue;
+}
+.searchbtn:hover{
+  background-color: white;
+  font-family: 'Poppins', sans-serif;
+  color:#000055 ;
+  border-radius: 10%;
+  border: 2px solid #000055;
+  padding: 5px 30px 5px 30px;
+  transition: all 0.7s ;
+}
