ランキング画面（一旦停止）

--- a/app/views/ranks/index.html.erb
+++ b/app/views/ranks/index.html.erb
@@ -1,4 +1,4 @@
-<div class="rank-jumbotron">
+<%# <div class="rank-jumbotron">
   <div class="container">
     <div class="row">
 
@@ -22,12 +22,12 @@
 
       <div class="col">
          <% @ranks.each do |rank| %>
-            <div class="ranking-user">
+            <%# <div class="ranking-user">
                <div class="user-level"> Lv. <%= rank.level %> <%= rank.name %></div>
-            </div>
+            <%# </div>
          <% end %>
-     </div>
+     <%# </div>
 
     </div>
   </div>
-</div>
+</div> %> 
