レスポンシブ対応時ビューの微調整

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,6 +17,8 @@
            <% else %>
               <div class="usershow-btn">
                  <%= link_to 'set a goal', new_mission_path, class: "setagoalbtn" %>
+              </div>
+              <div class="usershow-btn mt-4">
                  <%= link_to 'our goals',missions_path, class: "setagoalbtn" %>
               </div>
           <% end %>
