newroom作成画面ビュー編集（検証）

--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -66,6 +66,9 @@
           <div class="usershow-btn mt-4">
             <%= link_to 'my goals',"/users/#{@userid}", class: "setagoalbtn" %>
           </div>
+          <div class="usershow-btn mt-4">
+            <%= link_to 'new_room',new_room_path, class: "setagoalbtn" %>
+          </div>
        </div>
        <% end %>
     </div>
