--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -69,6 +69,9 @@
           <div class="usershow-btn mt-4">
             <%= link_to 'new_room',new_room_path, class: "setagoalbtn" %>
           </div>
+          <div class="usershow-btn mt-4">
+            <%= link_to 'join_team',"/rooms/#{@room}", class: "setagoalbtn" %>
+          </div>
        </div>
        <% end %>
     </div>
