ルーム参加機能（仮）検証

--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -70,8 +70,8 @@
             <%= link_to 'new_room',new_room_path, class: "setagoalbtn" %>
           </div>
           <div class="usershow-btn mt-4">
-            <%= link_to 'join_team',"/rooms/#{@room}", class: "setagoalbtn" %>
-          </div>
+            <%= link_to 'join_team',join_room_path(id: @room.id), class: "setagoalbtn" %>
+          </div>t
        </div>
        <% end %>
     </div>
