--- a/app/views/rooms/join.html.erb
+++ b/app/views/rooms/join.html.erb
@@ -2,7 +2,7 @@
          
           <select name="room[user_ids][]">
           <option value="">参加したいチームがあればチーム名を入力してください。</option>
-          <% Room.where(id: @rooms.ids).each do |room| %>
+          <% Room.where(id: params[:id]).each do |room| %>
           <option value=<%= room.id %>><%= room.room_name %></option>
           <% end %>
         </select>
