ビュー調整

--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -71,7 +71,7 @@
           </div>
           <div class="usershow-btn mt-4">
             <%= link_to 'join_team',join_room_path(id: @room.id), class: "setagoalbtn" %>
-          </div>t
+          </div>
        </div>
        <% end %>
     </div>
